--- a/Interfaces/de.lproj/RSSFeed.strings
+++ b/Interfaces/de.lproj/RSSFeed.strings
@@ -1,39 +1,29 @@
-
-/* Class = "NSWindow"; title = "RSS Feed"; ObjectID = "6"; */
-"6.title" = "RSS Feed";
-
-/* Class = "NSMenuItem"; title = "Adresse"; ObjectID = "45"; */
-"45.title" = "Adresse";
-
-/* Class = "NSWindow"; title = "RSS Feed"; ObjectID = "49"; */
-"49.title" = "RSS Feed";
-
-/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Abbrechen";
 
-/* Class = "NSButtonCell"; title = "Abonnieren"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Abonnieren";
 
-/* Class = "NSTextFieldCell"; title = "Quelle:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Quelle:";
 
-/* Class = "NSTextFieldCell"; title = "Ein neues Abonnement erstellen"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Ein neues Abonnement erstellen";
 
-/* Class = "NSTextFieldCell"; title = "Geben Sie den Link für das Abonnement ein oder wählen Sie eine Quelle aus der Liste."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Geben Sie den Link für das Abonnement ein oder wählen Sie eine Quelle aus der Liste.";
 
-/* Class = "NSTextFieldCell"; title = "Adresse:"; ObjectID = "110"; */
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "Adresse:";
 
-/* Class = "NSButtonCell"; title = "Speichern"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Speichern";
 
-/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Abbrechen";
 
-/* Class = "NSTextFieldCell"; title = "Abonnement bearbeiten"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Abonnement bearbeiten";
 
-/* Class = "NSButtonCell"; title = "Im Open Reader abonnieren"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
 "116.title" = "Im Open Reader abonnieren";
