--- a/Interfaces/zh-Hant.lproj/RSSFeed.strings
+++ b/Interfaces/zh-Hant.lproj/RSSFeed.strings
@@ -1,41 +1,28 @@
-
-/* Class = "NSWindow"; title = "RSS Feed"; ObjectID = "6"; */
-"6.title" = "RSS Feed";
-
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "44"; */
-"44.title" = "OtherViews";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS Feed"; ObjectID = "49"; */
-"49.title" = "RSS Feed";
-
-/* Class = "NSButtonCell"; title = "取消"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "取消";
 
-/* Class = "NSButtonCell"; title = "訂閱"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "訂閱";
 
-/* Class = "NSTextFieldCell"; title = "來源：\n"; ObjectID = "104"; */
-"104.title" = "來源：\n";
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
+"104.title" = "來源：";
 
-/* Class = "NSTextFieldCell"; title = "建立新的 RSS 訂閱頻道"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "建立新的 RSS 訂閱頻道";
 
-/* Class = "NSTextFieldCell"; title = "請在下方輸入 RSS 的連結網址，或是從來源列表中進行選擇，以輸入新聞訂閱頻道的捷徑名稱。"; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "請在下方輸入 RSS 的連結網址，或是從來源列表中進行選擇，以輸入新聞訂閱頻道的捷徑名稱。";
 
-/* Class = "NSTextFieldCell"; title = "URL："; ObjectID = "110"; */
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL：";
 
-/* Class = "NSButtonCell"; title = "儲存"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "儲存";
 
-/* Class = "NSButtonCell"; title = "取消"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "取消";
 
-/* Class = "NSTextFieldCell"; title = "編輯訂閱頻道"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "編輯訂閱頻道";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
