--- a/Interfaces/da.lproj/RSSFeed.strings
+++ b/Interfaces/da.lproj/RSSFeed.strings
@@ -1,39 +1,29 @@
-
-/* Class = "NSWindow"; title = "RSS-Feed"; ObjectID = "6"; */
-"6.title" = "RSS-Feed";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS-Feed"; ObjectID = "49"; */
-"49.title" = "RSS-Feed";
-
-/* Class = "NSButtonCell"; title = "Afbryd"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Afbryd";
 
-/* Class = "NSButtonCell"; title = "Abonner"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Abonner";
 
-/* Class = "NSTextFieldCell"; title = "Kilde:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Kilde:";
 
-/* Class = "NSTextFieldCell"; title = "Lav nyt abonnement"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Lav nyt abonnement";
 
-/* Class = "NSTextFieldCell"; title = "Indtast henvisningen for nyhedsfeedet forneden. Eller vælg fra kildelisten for at indtaste et genvejsnavn for nyhedsfeedet udgivet af kilden."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Indtast henvisningen for nyhedsfeedet forneden. Eller vælg fra kildelisten for at indtaste et genvejsnavn for nyhedsfeedet udgivet af kilden.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Gem"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Gem";
 
-/* Class = "NSButtonCell"; title = "Afbryd"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Afbryd";
 
-/* Class = "NSTextFieldCell"; title = "Rediger abonnement"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Rediger abonnement";
 
-/* Class = "NSButtonCell"; title = "Abonner i Open Reader"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
 "116.title" = "Abonner i Open Reader";
