--- a/Interfaces/es.lproj/RSSFeed.strings
+++ b/Interfaces/es.lproj/RSSFeed.strings
@@ -1,39 +1,29 @@
-
-/* Class = "NSWindow"; title = "Fuente RSS"; ObjectID = "6"; */
-"6.title" = "Fuente RSS";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "Fuente RSS"; ObjectID = "49"; */
-"49.title" = "Fuente RSS";
-
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Cancelar";
 
-/* Class = "NSButtonCell"; title = "Suscribirse"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Suscribirse";
 
-/* Class = "NSTextFieldCell"; title = "Fuente:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Fuente:";
 
-/* Class = "NSTextFieldCell"; title = "Crear nueva suscripción "; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Crear nueva suscripción ";
 
-/* Class = "NSTextFieldCell"; title = "Introduzca el enlace de la fuente de noticias a continuación, o elija de la lista de fuentes para introducir el acceso directo proporcionado por la fuente de noticias."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Introduzca el enlace de la fuente de noticias a continuación, o elija de la lista de fuentes para introducir el acceso directo proporcionado por la fuente de noticias.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Guardar"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Guardar";
 
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Editar suscripción:"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Editar suscripción:";
 
-/* Class = "NSButtonCell"; title = "Suscribirse a Open Reader"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
 "116.title" = "Suscribirse a Open Reader";
