--- a/Interfaces/eu.lproj/RSSFeed.strings
+++ b/Interfaces/eu.lproj/RSSFeed.strings
@@ -1,38 +1,28 @@
-
-/* Class = "NSWindow"; title = "RSS Jarioa"; ObjectID = "6"; */
-"6.title" = "RSS Jarioa";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS Jarioa"; ObjectID = "49"; */
-"49.title" = "RSS Jarioa";
-
-/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Ezeztatu";
 
-/* Class = "NSButtonCell"; title = "Harpidetu"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Harpidetu";
 
-/* Class = "NSTextFieldCell"; title = "Iturria:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Iturria:";
 
-/* Class = "NSTextFieldCell"; title = "Harpidetza berri bat sortu"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Harpidetza berri bat sortu";
 
-/* Class = "NSTextFieldCell"; title = "Sartu jarioaren URL helbidea behean, edota aukeratu bat iturrien listatik."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Sartu jarioaren URL helbidea behean, edota aukeratu bat iturrien listatik.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Gorde"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Gorde";
 
-/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Ezeztatu";
 
-/* Class = "NSTextFieldCell"; title = "Harpidetza editatu"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Harpidetza editatu";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
