--- a/Interfaces/pt-BR.lproj/RSSFeed.strings
+++ b/Interfaces/pt-BR.lproj/RSSFeed.strings
@@ -1,38 +1,28 @@
-
-/* Class = "NSWindow"; title = "RSS"; ObjectID = "6"; */
-"6.title" = "RSS";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS"; ObjectID = "49"; */
-"49.title" = "RSS";
-
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Cancelar";
 
-/* Class = "NSButtonCell"; title = "Assinar"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Assinar";
 
-/* Class = "NSTextFieldCell"; title = "Origem:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Origem:";
 
-/* Class = "NSTextFieldCell"; title = "Criar nova assinatura"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Criar nova assinatura";
 
-/* Class = "NSTextFieldCell"; title = "Entre o link das notícias abaixo. Ou escolha da lista de de Origens para entrar com um atalho para as notícias fornecidas pela origem."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Entre o link das notícias abaixo. Ou escolha da lista de de Origens para entrar com um atalho para as notícias fornecidas pela origem.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Salvar"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Salvar";
 
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Editar assinatura"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Editar assinatura";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
