--- a/Interfaces/tr.lproj/RSSFeed.strings
+++ b/Interfaces/tr.lproj/RSSFeed.strings
@@ -1,38 +1,28 @@
-
-/* Class = "NSWindow"; title = "RSS Beslemesi"; ObjectID = "6"; */
-"6.title" = "RSS Beslemesi";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS Beslemesi"; ObjectID = "49"; */
-"49.title" = "RSS Beslemesi";
-
-/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "İptal";
 
-/* Class = "NSButtonCell"; title = "Abone Ol"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Abone Ol";
 
-/* Class = "NSTextFieldCell"; title = "Kaynak:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Kaynak:";
 
-/* Class = "NSTextFieldCell"; title = "Yeni abonelik oluştur"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Yeni abonelik oluştur";
 
-/* Class = "NSTextFieldCell"; title = "Haber beslemesi için bağlantıyı aşağıya girin. Ya da Kaynak listesinden kaynak tarafından bildirilen kısayol adını girin."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Haber beslemesi için bağlantıyı aşağıya girin. Ya da Kaynak listesinden kaynak tarafından bildirilen kısayol adını girin.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Kaydet"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Kaydet";
 
-/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "İptal";
 
-/* Class = "NSTextFieldCell"; title = "Aboneliği düzenle"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Aboneliği düzenle";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
