--- a/Interfaces/uk.lproj/RSSFeed.strings
+++ b/Interfaces/uk.lproj/RSSFeed.strings
@@ -1,38 +1,28 @@
-
-/* Class = "NSWindow"; title = "RSS-стрічка"; ObjectID = "6"; */
-"6.title" = "RSS-стрічка";
-
-/* Class = "NSMenuItem"; title = "URL"; ObjectID = "45"; */
-"45.title" = "URL";
-
-/* Class = "NSWindow"; title = "RSS-стрічка"; ObjectID = "49"; */
-"49.title" = "RSS-стрічка";
-
-/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "102"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "102"; */
 "102.title" = "Скасувати";
 
-/* Class = "NSButtonCell"; title = "Підписатися"; ObjectID = "103"; */
+/* Class = "NSButtonCell"; title = "Subscribe"; ObjectID = "103"; */
 "103.title" = "Підписатися";
 
-/* Class = "NSTextFieldCell"; title = "Джерело:"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "Source:"; ObjectID = "104"; */
 "104.title" = "Джерело:";
 
-/* Class = "NSTextFieldCell"; title = "Створити нову підписку"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "Create a new subscription"; ObjectID = "106"; */
 "106.title" = "Створити нову підписку";
 
-/* Class = "NSTextFieldCell"; title = "Введіть адресу стрічки новин, або виберіть стрічку зі списку Джерело для того, щоб додати стрічку з заданого джерела."; ObjectID = "107"; */
+/* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Введіть адресу стрічки новин, або виберіть стрічку зі списку Джерело для того, щоб додати стрічку з заданого джерела.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSButtonCell"; title = "Зберегти"; ObjectID = "111"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Зберегти";
 
-/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "112"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "112"; */
 "112.title" = "Скасувати";
 
-/* Class = "NSTextFieldCell"; title = "Редагування підписки"; ObjectID = "114"; */
+/* Class = "NSTextFieldCell"; title = "Edit subscription"; ObjectID = "114"; */
 "114.title" = "Редагування підписки";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
